--- a/password_generator/style.css
+++ b/password_generator/style.css
@@ -26,6 +26,8 @@ body{
     margin-bottom: 15px;
     margin-top: 0;
     height: 1rem;
+    opacity: 0;
+    transition-timing-function: ease;
 }
 
 .inactive_refresh{
